# verbasense-codebase

./: .env.example  .gitignore  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_jobs_and_events.py  0002_job_retry_idempotency.py  0003_auth_admin_tables.py  0004_user_credentials_profile.py  0005_account_ai_connections_job_account.py  0006_audio_artifacts_live_sessions.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  exceptions.py
backend/app/asr/: __init__.py  factory.py  mock_provider.py  openai_compatible_provider.py  runtime.py  types.py
backend/app/config/: loader.py  settings.py
backend/app/core/: __init__.py  pipeline.py
backend/app/db/: __init__.py  base.py  models.py  repository.py  session.py
backend/app/providers/: __init__.py  factory.py  failing_provider.py  invalid_provider.py  mock_provider.py  openai_compatible_provider.py  types.py
backend/app/schemas/: auth.py  document.py  domain_config.py  errors.py  job.py  output.py  upload.py
backend/app/security/: redaction.py  secrets.py
backend/app/services/: account_ai.py  audio_artifacts.py  auth_service.py  (+5 more)
backend/scripts/: eval_document_golden.py
backend/tests/: conftest.py  test_api_contract_errors.py  test_asr_provider.py  test_auth_admin.py  test_config.py  test_document_processing_api.py  test_health.py  test_job_repository.py  test_pipeline.py  test_provider_factory.py  test_security_ops.py  test_upload_and_job.py
backend/verbasense_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+144 files in other folders)
