[project]
name = "verbasense-backend"
version = "0.1.0"
description = "VerbaSense CourtSense API — contract-first mock pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.43.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-multipart==0.0.22",
    "PyYAML==6.0.3",
    "SQLAlchemy==2.0.44",
    "httpx==0.28.1",
    "pypdf==6.10.0",
    "cryptography==46.0.7",
]

[project.optional-dependencies]
dev = [
    "alembic==1.17.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "ruff==0.15.9",
    "black==26.3.1",
    "mypy==1.20.0",
    "types-PyYAML==6.0.12.20250915",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
